<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/search_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/what_do_you_would_like_to_see"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/param1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/free_text_search_terms_to_compare_to_all_indexed_metadata"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:hint="@string/nasa_center_which_published_the_media"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/terms_to_search_for_in_description_fields"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/_508_description_fields"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/keywords_separate_multiple_values_with_commas"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param6"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/location"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param7"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/media_types_to_restrict_the_search_to_available_types_image_audio_separate_multiple_values_with_commas"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param8"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/the_media_asset_s_nasa_id"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param9"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/page_number_starting_at_1_of_results_to_get"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param10"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/the_primary_photographer_s_name"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param11"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/a_secondary_photographer_videographer_s_name"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param12"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/terms_to_search_for_in_title_fields"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param13"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/the_start_year_for_results_format_yyyy"
                android:inputType="text"
                android:layout_gravity="center_horizontal"

                android:singleLine="true"/>
            <EditText
                android:id="@+id/param14"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/the_end_year_for_results_format_yyyy"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"/>
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>