<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <Button
        android:id="@+id/media"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/media"
        android:onClick="startMediaSearchActivity"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/satellites"
        app:layout_constraintBottom_toTopOf="@id/asteroids"
        />
    <Button
        android:id="@+id/satellites"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/satellites"
        android:onClick="startSatellitesActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@id/media"
        app:layout_constraintBottom_toTopOf="@id/stars"/>
    <Button
        android:id="@+id/asteroids"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/asteroids"
        android:onClick="startAsteroidsActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/stars"
        app:layout_constraintTop_toBottomOf="@id/media"/>
    <Button
        android:id="@+id/stars"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stars"
        android:onClick="startStarsActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@id/asteroids"
        app:layout_constraintTop_toBottomOf="@id/satellites"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>